toolchain/internal/core/analysis/testdata/errors/cycles/array_cycle.vdl
// @expect: E601
// Arrays do NOT break type cycles - circular references are always forbidden
// (unless the field is optional)

type TreeNode {
  value: string
  children: TreeNode[]
}
